Replace overflow:scroll to overflow:auto to avoid unnecessary scrollbars

--- a/css/dashboard/activity-answers.less
+++ b/css/dashboard/activity-answers.less
@@ -9,7 +9,7 @@
     .cell();
     flex: 1;
     white-space: normal;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
   }
 
