--- a/css/dashboard/activity-questions.less
+++ b/css/dashboard/activity-questions.less
@@ -17,7 +17,7 @@
 
       &.fullPrompt {
         white-space: normal;
-        overflow-y: scroll;
+        overflow-y: auto;
       }
     }
   }
