--- a/css/dashboard/dashboard.less
+++ b/css/dashboard/dashboard.less
@@ -19,7 +19,7 @@
   .activityHeaders {
     width: calc(~"100% -" @student-name-width + 2 * @content-padding);
     white-space: nowrap;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
 
     .questionPromptsRow {
@@ -53,7 +53,7 @@
     margin-left: -@border-width;
     vertical-align: top;
     white-space: nowrap;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
   }
 
@@ -61,7 +61,7 @@
     width: calc(~"100% -" 2 * @content-padding);
     display: inline-block;
     vertical-align: top;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
   }
 }
